--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node src/index",
+    "start": "node src/index.js",
     "dev": "env-cmd ./config/dev.env nodemon src/index.js"
   },
   "keywords": [],
@@ -13,13 +13,18 @@
   "dependencies": {
     "@sendgrid/mail": "^6.3.1",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
+    "ejs": "^3.0.2",
     "env-cmd": "^8.0.2",
     "express": "^4.16.4",
+    "hbs": "^4.1.1",
     "jsonwebtoken": "^8.4.0",
     "mongodb": "^3.1.10",
     "mongoose": "^5.3.16",
     "multer": "^1.4.1",
     "nodemailer": "^6.4.6",
+    "path": "^0.12.7",
     "sharp": "^0.25.2",
     "validator": "^10.9.0"
   },
